<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:text="@string/input_your_names"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/red" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:text="@string/login"
        android:textColor="@color/white" />


</LinearLayout>